fix(breadcrumb): center breadcrumb itemLink text
- although the .spectrum-Breadcrumb-item was aligned center, the items
within it were not. This should align any children to the center of the
parent item, and correct the visual misalignment between the text/button
and the separator icon

- chore(breadcrumb): create changeset

--- a/components/breadcrumb/index.css
+++ b/components/breadcrumb/index.css
@@ -176,6 +176,8 @@
 	display: inline-flex;
 	white-space: nowrap;
 
+	align-items: center;
+
 	font-family: var(--mod-breadcrumbs-font-family, var(--spectrum-breadcrumbs-font-family));
 	font-size: var(--mod-breadcrumbs-font-size, var(--spectrum-breadcrumbs-font-size));
 	font-weight: var(--mod-breadcrumbs-font-weight, var(--spectrum-breadcrumbs-font-weight));
